# fyp-xcoin

./: .gitignore  CMakeLists.txt  Makefile  block.cpp  block.h  example.xml  example_multiple_generated.xml  main.c  main.cpp  main.h  net.h  run_exp.py  run_multinode.py  util.cpp  util.h  xcoin
cmake/: CMakeCache.txt
src/: Makefile  main.cpp  main.h  xcoin
tools/: search
